--- a/css/Home.css
+++ b/css/Home.css
@@ -10,6 +10,10 @@ a:hover
     text-decoration:none !important;
 }
 /*start header */
+.top-nav
+{
+    position: relative;
+}
 .top-head {
     position: relative;
     min-height: 92px;
@@ -26,12 +30,90 @@ a:hover
     height: 47px ;
     margin: auto;  
 }
-.top-menu
+.top-search  
 {
-    float: right !important;
-    width: auto;
+        position: relative;
+        margin-left: 20px;
+}
+.top-search a {
+    position: relative;
+    display: block;
+    margin-top: 20px;
+    padding: 0 19px!important;
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    background: #eee;
+    text-align: center;
+    line-height: 55px;
+    z-index: 5;
+}
+.top-search a:hover 
+{
+    background:#e7512f ;
+}
+.top-search a:hover span
+{
+    color:#fff;
+}
+.top-search a span {
+    font-size: 19px;
+    color:#e7512f
 }
 
+.top-search .search-box .input-box
+{
+    border:1px solid #eee;
+    background: #fff;
+}
+
+.search-box {
+   visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 92px;
+    right:0px;
+    z-index: 3;
+    width: 400px;
+    transition: opacity .5s ease-in;
+    -moz-transition: opacity .5s ease-in;
+    -ms-transition: opacity .5s ease-in;
+    -o-transition: opacity .5s ease-in;
+    -webkit-transition: opacity .5s ease-in; 
+}
+
+.search-box:before {
+    position: absolute;
+    top: -45px;
+    right: 0;
+    z-index: 0;
+    width: 55px;
+    height: 48px;
+    content: "";
+    background-color: #e7512f;
+}
+.left 
+{
+    float: left;
+}
+.search-box .btn_go{
+    width: 55px;
+    height: 55px;
+    background-color: #e7512f;
+    color: #fff;
+    border-radius: 3px;
+    outline: none;
+    border: 0;
+  
+}
+.search-box .btn_go:hover
+{
+    background-color: #d03d17;
+}
+.search-box input[type=text] {
+    width: 343px;
+    height: 53px;
+}
 .top-nav>ul>li {
     position: relative;
     float: left;
@@ -93,7 +175,7 @@ a:hover
 {
     padding-top:5px;  
 }
-.top-nav>ul.def-effect li ul {
+.top-nav>ul.def-effect li>ul {
     height: 0;
     display: block;
     opacity: 0;
@@ -106,7 +188,7 @@ a:hover
     z-index: 1;
     white-space: nowrap;
 }
-.top-nav>ul.def-effect li:hover ul
+.top-nav>ul.def-effect li:hover>ul
 {
     height: auto;
     opacity: 1;
@@ -226,9 +308,66 @@ a:hover
 {
     margin-bottom:0.8px;
 }
-
-
-
+.div-mega
+{
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    background-color: #e7512f;
+    width: 1140px;
+    left: -945.75px;
+    top:92px;
+    z-index: 99;
+    padding: 25px 0px;   
+    -webkit-box-shadow: inset 0 10px 11px -5px rgba(0,0,0,.3);
+    -moz-box-shadow: inset 0 10px 11px -5px rgba(0,0,0,.3);
+    box-shadow: inset 0 10px 11px -5px rgba(0,0,0,.3);   
+    transition: opacity .5s ease-in;
+    -moz-transition: opacity .5s ease-in;
+    -ms-transition: opacity .5s ease-in;
+    -o-transition: opacity .5s ease-in;
+    -webkit-transition: opacity .5s ease-in; 
+}
+.div-mega .div-mega-section
+{
+    width: 29%;
+    float: left;
+    margin: 0 2% 2%;
+}
+.div-mega .div-mega-section h5
+{
+    padding: 12px 15px!important;
+    font-size: 12px;
+    text-transform: uppercase;
+    border-radius: 3px;
+    background: #fff;
+    color: #777;
+    font-weight: 700;
+}
+.top-nav.div-mega ul div.div-mega ul {
+    height: 100%;
+    display: block;
+    opacity: 1;
+    visibility: visible;
+    min-width: 180px;
+    max-width: 609px;
+}
+.div-mega div.div-mega-section ul li {
+    opacity: 1;
+    -moz-transform: rotateY(0);
+    -ms-transform: rotateY(0);
+    -o-transform: rotateY(0);
+    transform: rotateY(0);
+    border-bottom: 1px #d03d17 solid;
+    padding:8px;
+}
+.div-mega div.div-mega-section ul li a {
+    padding: 8px 5px;
+}
+.div-mega div.div-mega-section ul li:hover
+{
+    cursor: pointer;
+}
 /*end header */
 .welcome
 {
@@ -933,14 +1072,14 @@ hr {
 {
     margin:20px 0;
 }
-#footer  .input-box .txt-box
+.txt-box
 {
     background:transparent;
     border:0;
     padding:0 12px;
     outline: none;
     color: #969696;
-    font-size: 11px;
+    font-size: 12px;
 }
 #footer .nl-btn
 {
