--- a/css/Home.css
+++ b/css/Home.css
@@ -4,17 +4,72 @@ body{
     font-size: 13px !important;
     line-height: 1.428571429;
     font-family: "Open Sans",Arial,sans-serif;
+    overflow-x: hidden;
+}
+.responsive-nav::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+.responsive-nav::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+.responsive-nav::-webkit-scrollbar-thumb {
+    background: #ff8e74;
+
+    
+}
+
+/* Handle on hover */
+.responsive-nav::-webkit-scrollbar-thumb:hover {
+    background:  #dd3e1a;
 }
 a:hover
 {
     text-decoration:none !important;
 }
-/*start header */
-.top-nav
+.menuBtn
 {
-    position: relative;
-    
+    background-color: #e7512f;
+    color: #fff;
+    display: none;
+    transition: all 0.4s ease;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
 }
+.menuBtn:hover
+{
+    color: #fff !important;
+}
+.responsive-nav
+{
+    background-color: #e7512f;
+    display: none;
+    transition: all 0.4s ease;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+  
+}
+/*start header */
+.sticky {
+    position: fixed !important;
+    top: 0;
+    left: 0;
+    padding: 0 !important;
+    width: 100%;
+    background-color: #fff;
+    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, .1);
+    box-shadow: 0 1px 4px rgba(0, 0, 0, .1);
+    z-index: 999;
+    min-height:82px !important;
+}
+.carousel-caption 
+{
+    z-index:0 !important;
+}
+
 .top-head {
     position: relative;
     min-height: 92px;
@@ -23,7 +78,7 @@ a:hover
 .top-head .logo 
 {
     background:url('../images/logo.png') no-repeat 50% 50%;
-    margin-top: 20px;
+
 }
 .top-head .logo a {
     display: block;
@@ -39,7 +94,7 @@ a:hover
 .top-search a {
     position: relative;
     display: block;
-    margin-top: 20px;
+    margin-top:15px;
     padding: 0 19px!important;
     width: 55px;
     height: 55px;
@@ -151,19 +206,8 @@ a:hover
     top: 34px;
     right: 4px;
     left: auto;
-    background-color: #5cb85c
-
-}
-.top-nav ul.def-effect li li .menu-hint
-{
-    top:5px;
-    right:auto;
-}
-.menu-hint:hover
-{
-    background-color: #439943;
-}
-.menu-hint {
+    background-color: #5cb85c;
+    display: block;
     font-size: 9px;
     padding: 1px 4px;
     line-height: 1;
@@ -171,7 +215,19 @@ a:hover
     white-space: nowrap;
     border-radius: .25em;
     color: #fff;
+
 }
+.top-nav ul.def-effect li li .menu-hint
+{
+    position: absolute;
+    top:5px;
+    right:auto;
+}
+.menu-hint:hover
+{
+    background-color: #439943;
+}
+
 .top-nav .def-effect>li:hover
 {
     padding-top:5px;  
@@ -237,6 +293,7 @@ a:hover
     background:#a7290a !important;
 }
 .top-nav>ul>li.current::after {
+    display: block;
     position: absolute;
     bottom: -9px;
     left: -3px;
@@ -252,6 +309,11 @@ a:hover
     -webkit-transform: skew(-35deg,0);
      transform: skew(-35deg,0);
 }
+.top-nav>ul>li.hidden::after
+{
+    display: none;
+}
+
 
 .top-nav li li.haschildern::after {
     position: absolute;
@@ -309,7 +371,7 @@ a:hover
 {
     margin-bottom:0.8px;
 }
-.div-mega
+#shortcodes-box .div-mega
 {
     visibility: hidden;
     opacity: 0;
@@ -369,6 +431,214 @@ a:hover
 {
     cursor: pointer;
 }
+.top-head .top-menu
+{
+    display: flex;
+    justify-content: flex-end;
+}
+.sticky .logo {
+    margin-top: 5px!important;
+}
+@media (max-width: 992px)
+{
+.top-head .logo a {
+    margin: auto;
+}
+.top-head .logo  {
+    margin-bottom:20px;
+}
+}
+
+@media (max-width: 768px)
+{
+.top-head .top-menu
+{
+    display: none !important;
+}
+.menuBtn {
+    padding: 9px 12px 8px 12px;
+    margin: 0;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    position: fixed;
+    transition: all 0.4s ease;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    display: block;
+    z-index: 999999999999;
+}
+.menuBtn i {
+    font-size: 21px;
+}
+
+.responsive-nav {
+    position: fixed;
+    width: 60%; 
+    overflow:scroll;
+    top: 0px;
+    left: -60%;
+    height: 100%;
+    z-index: 999999;
+    display: block;
+   
+}
+.responsive-nav h3 {
+    color: #fff;
+    padding: 15px;
+    font-size: 100%;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+.responsive-nav ul li a{
+    display: block;
+    color: #fff;
+    font-size: 14px;
+    padding: 10px 15px;
+    text-transform: uppercase;
+}
+.responsive-nav ul li a i{
+    margin-right: 10px;
+}
+.responsive-nav > ul > li.selected {
+    background: #9E9E9E;
+}
+.responsive-nav ul li{
+    position: relative;
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+     transition: all 0.4s ease;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+}
+.responsive-nav ul li span.downArrow {
+    position: absolute;
+    right: 10px;
+    z-index: 999;
+    top: 10px;
+    cursor: pointer;
+}
+.responsive-nav ul li span.downArrow::before {
+    content: "\f107";
+    font-family: FontAwesome;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    top: 10px;
+    border-radius: 50%;
+    background: #EAEAEA;
+    color: #000;
+    text-align: center;
+    line-height: 20px;
+}
+.responsive-nav ul li ul, .responsive-nav ul li div.div-mega_res {
+   
+    display: none;
+}
+.responsive-nav ul li ul {
+    background: #fff;
+}
+.responsive-nav ul li ul li {
+    border-top-color: #eee;
+}
+.responsive-nav ul li ul li a {
+    color: #333 !important;
+}
+.div-mega-section h4 {
+    margin: 0;
+    padding: 10px;
+    background: #eee;
+}
+.div-mega-section {
+    float: none;
+    width: 100%;
+    margin: 0 !important;
+}
+.responsive-nav ul li ul li.selected {
+    background: #E8E8E8;
+}
+.div-mega-section ul {
+    display: block !important;
+}
+.responsive-nav ul li.current > span.downArrow::before {
+    content: "\f106";
+}
+.responsive-nav >ul >li:hover
+{
+    background-color: #c2391a;
+}
+
+.responsive-nav ul li ul >li:hover
+{
+    background-color: #c2391a;
+}
+.responsive-nav ul li li span.downArrow:before {
+    border-radius: 0;
+}
+.responsive-nav ul ul ul li a {
+    font-size: 11px;
+}
+.responsive-nav ul ul ul {
+    padding-left: 25px;
+}
+.responsive-nav .menu-hint
+{
+    top: 12px;
+    right: auto;
+    left: 130px;
+}
+.div-mega-section h4 {
+   font-size: 12px;
+   text-transform: uppercase;
+}
+.responsive-nav ul li ul li a {
+    font-size: 13px;
+    text-transform: none;
+}
+.menuBtn-selected{
+    margin-left:60%
+}
+.menuBtn-selected i:before,.menuBtnOneTogg i:before{
+    content:"\f00d";
+}
+.res-act{
+    left:0;
+}
+.sticky
+{
+    min-height:60px !important;
+}
+.top-head .logo
+{
+    margin-top:20px;
+    margin-bottom: 0px !important;
+}
+#footer .tweets 
+{
+    margin-top:40px;
+}
+.skew-25 
+{
+    -moz-transform: skew(0deg, 0) !important;
+    -ms-transform: skew(0deg, 0) !important;
+    -o-transform: skew(0deg, 0) !important;
+    -webkit-transform: skew(0deg, 0) !important;
+    transform: skew(0deg, 0) !important;
+}
+.skew25 
+{
+    -moz-transform: skew(0deg, 0) !important;
+    -ms-transform: skew(0deg, 0) !important;
+    -o-transform: skew(0deg, 0) !important;
+    -webkit-transform: skew(0deg, 0) !important;
+    transform: skew(0deg, 0) !important;
+}
+.footer-bottom .col-lg-5
+{
+ display: flex;
+ justify-content: center;
+}
+}
+
 /*end header */
 /* start slider*/
 .carousel-item >img
@@ -413,7 +683,9 @@ a:hover
     padding: 0 0 20px;
     border-bottom: 1px #e2e2e2 solid;
     font-weight: 400;
-    }
+    color: #e7512e;
+    font-size: 22px;
+ }
 .block-head  span
 {
     font-size: 22px ;
@@ -854,16 +1126,86 @@ li, ul {
     overflow: hidden;
     margin: 0px 0px 15px;
     cursor: pointer;
+ 
 }
 .img-holder img
 {
     width: 100%;
     height: auto;
+    -moz-transition: all 1s ease-out;
+    -o-transition: all 1s ease-out;
+    -webkit-transition: all 1s ease-out;
     transition: all 1s ease-out;
+}
+.img-holder:hover img
+{
+    -ms-transform: scale(1.3); /* IE 9 */
+    -webkit-transform: scale(1.3); /* Safari 3-8 */
+    transform: scale(1.3); 
 }
 .name-holder {
     padding: 0 15px 10px;
 }
+.img-over {
+    position: absolute;
+    top: -46%;
+    left: -20%;
+    z-index: 9;
+    width: 170%;
+    height: 170%;
+    -moz-transform: rotate(-37deg);
+    -ms-transform: rotate(-37deg);
+    -o-transform: rotate(-34deg);
+    -webkit-transform: rotate(-37deg);
+    transform: rotate(-34deg);
+    overflow: hidden;
+    opacity: 0;
+    transition: all 0.5s ease-in;
+   
+}
+.img-over a
+{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+.img-over a.link 
+{
+    position: absolute;
+    top: -52%;
+    left: -8%;
+    background-color: rgba(232,82,47,0.7);
+}
+.img-over a.link b {
+    top: 75%;
+    left: 41%;
+}
+.img-over a.zoom {
+    background-color: rgba(119,119,119,0.7);
+}
+.img-over a.zoom {
+    position: absolute;
+    top: 48%;
+    left: -10%;
+}
+.img-over a.zoom b {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+}
+.img-over b {
+    position: absolute;
+    z-index: 8;
+    color: #fff;
+    font-weight: 400;
+    font-size: 40px;
+    -moz-transform: rotate(34deg);
+    -ms-transform: rotate(34deg);
+    -o-transform: rotate(34deg);
+    -webkit-transform: rotate(34deg);
+    transform: rotate(34deg);
+}
+
 .project-name {
     display: table;
     margin: auto;
@@ -1009,6 +1351,48 @@ hr {
 #footer .flicker-feed li
 {
     float: left;
+    position: relative;
+    margin: 0 1px 1px 0;
+}
+.img-overlay
+{
+    position: absolute;
+    width: 61px;
+    height: 61px;
+    background: rgba(232,82,47,.8);
+    left: 0;
+    opacity: 0;
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    -moz-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    -webkit-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out
+}
+#footer .flicker-feed li:hover .img-overlay
+{
+    opacity: 1;
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    -webkit-transform: scale(1);
+    transform: scale(1);
+}
+.img-overlay::before
+{
+    
+    display: block;
+    color: #fff;
+    content: "\f0c1";
+    text-align: center;
+    font-size: 25px;
+    font-family: FontAwesome;
+    font-size: 22px;
+    line-height: 61px; 
+    
 }
 #footer .flicker-feed li img
 {
@@ -1130,4 +1514,6 @@ hr {
     margin-left: 27px;
     margin-top: 4px;
 }
+
+
 /*end footer*/
